[package]
name = "acarsrx"
version = "0.8.0"
authors = ["Manoel de Souza <manoel.desouza@outlook.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtlsdr = "0.1.4"
num = "0.2"
libc = "0.2.62"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.8"
